# inline-grpc-android-demo

./: .gitignore  .gitmodules  README.md  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/jniLibs/armeabi-v7a/: libgrpc_server.h
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/demo/: MainActivity.kt
app/src/main/java/com/example/demo/ui/theme/: Theme.kt
app/src/main/java/com/example/grpc/client/: GreeterClient.kt  GrpcNativeBridge.kt  NativeManagedChannel.kt
app/src/main/java/com/example/grpc/pb/greeter/: DataStruct.java  DataStructOrBuilder.java  GreeterGrpc.java  GreeterOuterClass.java  HelloReply.java  HelloReplyOrBuilder.java  HelloRequest.java  HelloRequestOrBuilder.java
app/src/main/jni/: grpc_native_bridge.c  libgrpc_server.h
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: compile_protos.sh
